<resources>
    <string name="app_name">FiTrainer</string>

    <string name="serverURL">http://192.168.0.157/fitrainer/RedeemAPI.php</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Menu Hamburguesa -->
    <string name="mi_perfil">Mi Perfil</string>
    <string name="mis_rutinas">Mis rutinas</string>
    <string name="mis_dietas">Mis dietas</string>
    <string name="asignar_usuario">Asignar usuario</string>
    <string name="inicio_sesion">Inicio Sesión</string>
    <string name="desconectar">Desconectar</string>
    <string name="title_activity_listado_categorias">ListadoCategorias</string>
    pero

    <string name="btnHombro">Hombro</string>
    <string name="btnPierna">Pierna</string>
    <string name="btnEspalda">Espalda</string>
    <string name="btnBiceps">Biceps</string>
    <string name="btnTriceps">Triceps</string>
    <string name="btnCardio">Cardio</string>
    <string name="btnAbdominales">Abdominales</string>
    <string name="title_activity_detalle_categoria">DetalleCategoria</string>
    <string name="title_activity_inicio_sesion">Sign in</string>

    <!-- Strings related to Main Activity -->
    <!-- Tabs -->
    <string name="tabRutinaHoy">Rutina de hoy</string>
    <string name="tabMenuHoy">Menú de hoy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_registrarse_short">Registrarse</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btnRegistrarse">Registrarse</string>


    <!-- Strings related to registro/modificacion -->
    <string name="regNickName">Usuario</string>
    <string name="regNombre">Nombre</string>
    <string name="regEmail">E-mail</string>
    <string name="regContraseña">Contraseña</string>
    <string name="regRepContraseña">Repita contraseña</string>
    <string name="regPeso">Peso</string>
    <string name="regAltura">Altura</string>
    <string name="regEdad">Edad</string>
    <string name="regHombre">Hombre</string>
    <string name="regMujer">Mujer</string>
    <string name="regReset">Reset</string>
    <string name="regSubmit">Submit</string>

    <!-- Strings related to Floating Button y Floating Menu -->
    <string name="flBtnAddRutina">Añadir rutina</string>
    <string name="flBtnAddMenu">Añadir menu</string>
    <string name="flBtnCalendario">Ver calendario</string>


    <!-- Strings related to Detalle Categoria -->
    <string name="detCatDesc">Descripcion</string>
    <string name="detCatbtnConfig">Configurar</string>

    <!-- Strings related to Configuracion -->
    <string name="confSeries">Series</string>
    <string name="confRepeticiones">Repeticiones</string>
    <string name="confPeso">Peso</string>
    <string name="confGuardar">Guardar</string>
    <string name="confModificar">Modificar</string>
    <string name="confMas">+</string>
    <string name="confMenos">-</string>

    <!-- Strings related to Configuracion -->
    <string name="misRutinas">Mis rutinas</string>

    <!-- Strings related to Mis Rutinas -->
    <string name="detalleListMenu">Detalle</string>
    <string name="delete">Delete</string>

    <!-- Strings related to Detalle Rutina -->
    <string name="btnModificar">Modificar</string>


    <!-- Strings related to Asignar Usuarios -->
    <string name="asignNickname">Nickname</string>
    <string name="asignNombre">Nombre</string>
    <string name="asignEmail">Email</string>
    <string name="asignEdad">Edad</string>

</resources>
