<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro_modificacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fitrainer.upm.fitrainer.RegistroModificacion">

    <TextView
        android:text="@string/regNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="@string/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/etNombre"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/regContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/etEmail"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRepContrasenia"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etContrasenia"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombre"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEdad"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/etRepContrasenia" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etAltura"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPeso"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/regPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/etAltura"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:text="@string/regRepContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/etContrasenia"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/regAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:text="@string/regNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/etNickname"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/regEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/etRepContrasenia"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNickname"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true" />

    <RadioButton
        android:text="@string/regMujer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbtMujer"
        android:onClick="onRadioButtonClicked"
        android:layout_below="@+id/etPeso"
        android:layout_alignStart="@+id/etPeso"
        android:layout_marginTop="12dp" />

    <RadioButton
        android:text="@string/regHombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbtHombre"
        android:onClick="onRadioButtonClicked"
        android:layout_alignBaseline="@+id/rbtMujer"
        android:layout_alignBottom="@+id/rbtMujer"
        android:layout_alignStart="@+id/textView9" />

    <Button
        android:text="@string/regReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnReset"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:text="@string/regSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnModReg"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/rbtMujer" />
</RelativeLayout>
