<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configurar_ejercicios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fitrainer.upm.fitrainer.ConfigurarEjercicios">


    <NumberPicker
        android:id="@+id/npRepeticiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/npSeries"
        android:layout_alignBottom="@+id/npSeries"
        android:layout_alignStart="@+id/confRepeticiones" />

    <NumberPicker
        android:id="@+id/npPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/npRepeticiones"
        android:layout_alignBottom="@+id/npRepeticiones"
        android:layout_alignStart="@+id/confPeso" />

    <NumberPicker
        android:id="@+id/npSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="211dp" />

    <TextView
        android:id="@+id/confRepeticiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confRepeticiones"
        android:layout_alignBaseline="@+id/confSeries"
        android:layout_alignBottom="@+id/confSeries"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/confPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confPeso"
        android:layout_marginEnd="48dp"
        android:layout_alignBaseline="@+id/confRepeticiones"
        android:layout_alignBottom="@+id/confRepeticiones"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/confSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confSeries"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/confTitulo"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/confGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/confRepeticiones"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="67dp"
        android:id="@+id/confBtnGuardar" />

</RelativeLayout>
